<resources>
    <string name="app_name">Chapter 14</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_fragment_detail">Fragment Detail</string>
    <string name="action_navigate_to_detail">Navigate To Detail</string>
    <string name="title_home">Home</string>
    <string name="title_detail">Detail</string>
    <string name="title_about">About</string>
    <string name="key_message_id">KEY_MESSAGE_ID</string>
    <string name="action_app_intro">App Introduction</string>
    <string name="message_about">About App Information</string>
    <string name="action_item_profile">Profile</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="action_login">@string/title_login</string>
    <string name="action_logout">Logout</string>
    <string name="hint_pwd">Enter your password</string>
    <string name="title_item_sort">Sorting</string>
    <string name="check_remember_me">Remember me</string>
    <string name="action_search">Search user</string>
    <string name="text_cancel">Cancel</string>
    <string name="hint_email">Enter your email</string>
    <string name="err_login_failed">Incorrect email or password!</string>
    <string name="txt_profile_full_name">Full name: %s</string>
    <string name="txt_profile_email">Email: %s</string>
    <string name="txt_profile_birth_date">Birth date: %s</string>
    <string name="txt_profile_phone">Phone number: %s</string>
    <string name="txt_profile_gender">Gender: %s</string>
    <string name="error_password">Password cannot leave empty!</string>
    <string name="error_email">Email cannot leave empty</string>
    <string name="title_register">Register</string>
    <string name="title_settings">Settings</string>
    <string name="title_import">Import Database</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_others_menu">Other Options</string>
    <string name="action_languages">Languages</string>
    <string name="action_clear">Clear</string>
    <string name="action_dark_mode">Dark mode</string>
    <string name="font_size">Font size</string>
    <string name="action_search_user">Search user</string>
    <string name="item_text_notifications">Notifications</string>
    <string name="action_update">Update</string>
    <string name="title_my_android_app">My Android App</string>
    <string name="title_branium_academy">\u00a9 2023 Branium Academy</string>
    <string name="des_ba_icon">My App Icon</string>
    <string name="title_dlink">Deeplink</string>
    <string name="filter_view_http_example">Filter Deeplink</string>

    <!-- array -->
    <string-array name="font_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://www.braniumacademy.net/.well-known/assetlinks.json\" }]</string>
    <string name="txt_email">Email</string>
    <string name="txt_full_name">Full name</string>
    <string name="des_btn_more">Image button more</string>
    <string name="des_avatar">Image user\'s avatar</string>
    <string name="hint_enter_full_name">Enter your full name</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="label_pick_your_avatar">Pick your avatar:</string>
    <string name="label_new_registration">New User Registration</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="des_avatar_image_picker">Avatar image picker</string>
    <string name="error_full_name">Full name cannot left blank!</string>
    <string name="error_avatar">Please select your avatar!</string>
    <string name="message_register_success">Register new user successful!</string>
    <string name="error_email_being_used">Add new user fail. Email is being used!</string>
    <string name="label_done">Done!</string>
    <string name="action_ok">OK</string>
</resources>