<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="net.braniumacademy.chapter14.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_fragment_to_detail_fragment"
            app:destination="@id/detail_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_aboutActivity"
            app:destination="@id/aboutActivity" />
        <action
            android:id="@+id/action_home_fragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/detail_fragment"
        android:name="net.braniumacademy.chapter14.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />
    <action
        android:id="@+id/action_global_home_fragment"
        app:destination="@id/home_fragment"
        app:popUpTo="@id/home_fragment" />
    <activity
        android:id="@+id/aboutActivity"
        android:name="net.braniumacademy.chapter14.ui.about.AboutActivity"
        android:label="activity_about"
        tools:layout="@layout/activity_about" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="net.braniumacademy.chapter14.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="net.braniumacademy.chapter14.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />
</navigation>