<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="#546E7A">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        android:textColorHint="#546E7A">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pwd"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/action_login" />

    <Button
        android:id="@+id/btn_login_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel" />

    <CheckBox
        android:id="@+id/check_remember_me"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/check_remember_me" />
</androidx.constraintlayout.widget.ConstraintLayout>